--- a/Lectures/Lec1.ipynb
+++ b/Lectures/Lec1.ipynb
@@ -365,17 +365,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "078af77b",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Fermi Problems\n",
+    "\n",
+    "From [wikipedia](https://en.wikipedia.org/wiki/Fermi_problem): In physics or engineering education, a Fermi problem, Fermi quiz, Fermi question, Fermi estimate, order-of-magnitude problem, order-of-magnitude estimate, or order estimation is an estimation problem designed to teach dimensional analysis or approximation of extreme scientific calculations, and such a problem is usually a back-of-the-envelope calculation. The estimation technique is named after physicist Enrico Fermi as he was known for his ability to make good approximate calculations with little or no actual data. Fermi problems typically involve making justified guesses about quantities and their variance or lower and upper bounds. In some cases, order-of-magnitude estimates can also be derived using dimensional analysis.\n",
+    "\n",
+    "### Example:\n",
+    "\n",
+    "When you take a single breath, how many molecules of gas you intake would have come from the dying breath of Caesar?\" For the sake of simplicity, we can assume that the molecules which Caesar exhaled in his last breath have diffused evenly to the whole atmosphere, and these molecules were not absorbed by the ocean or plants for thousands of years. Although these are not valid assumptions, they can help us forget about the complexity of the real world, and to make elementary estimations in the simplest way. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "03d7cbec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 26,
+   "id": "cbc5c4a2",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "answer 1 is 1.04e+00\n",
+      "answer 2 is 1.04e+00\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "R_earth=6400 #Km\n",
+    "h_atm = 50 #Km\n",
+    "V_lung = 1 #l\n",
+    "V_mol = 22.4 #l/mol\n",
+    "Na = 6.02e23 # molecules/mol\n",
+    "V_atm = 4*np.pi*(R_earth*1e3)**2*50e3 #m^3\n",
+    "\n",
+    "l2m3 = 1e-3 #m^3/l\n",
+    "\n",
+    "NmolInBreadth1 = Na/V_mol #molec/l\n",
+    "\n",
+    "Nmol1 = NmolInBreadth1/(V_atm/(V_lung*l2m3))\n",
+    "print('answer 1 is {:.2e}'.format(Nmol1))\n",
+    "rho = 1.2 #kg/m^3 Density of air at surface of earth\n",
+    "uma = 1.6e-27 #Kg/u\n",
+    "mn2 = 2*14*uma\n",
+    "NmolInBreadth2 = (V_lung*l2m3*rho)/mn2\n",
+    "\n",
+    "Nmol2 = NmolInBreadth2/(V_atm/(V_lung*l2m3))\n",
+    "print('answer 2 is {:.2e}'.format(Nmol2))\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbc5c4a2",
+   "id": "3c631a08",
    "metadata": {},
    "outputs": [],
    "source": []
