--- a/Lectures/Lec1.ipynb
+++ b/Lectures/Lec1.ipynb
@@ -111,7 +111,7 @@
     }
    },
    "source": [
-    "## Scientific Notation\n",
+    "# Scientific Notation\n",
     "Large and small numbers are best written in scientific notation.\n",
     "\n",
     "Examples:\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "822f8014",
    "metadata": {
     "slideshow": {
